# src/controllers/User_controller.ts
@@ -61,12 +61,12 @@ export default class UserController {
     lastNAme:"",
     gender:"F",
     DOB:new Date(2022,9,3),
-    address:[""],
+    address:[{country:"turkye", governrate:"turkye", maniplocity:"turkye"}],
     verified:"notSend",
     status:"active",
     accountType:"PA",
     lastLoginDate:new Date(2022,9,3),
-    accountSettings:"",
+    accountSettings:{setting:"setting"},
     languages:[""],
     maritalStatus:"married",
   })
