# src/models/Emloyees.ts
@@ -4,7 +4,7 @@ const EmloyeesSchema = new Schema<IEmloyees>({
     uID: { type: String, required: true },
     roleID: { type: String, required: true },
     salary: { type: Number, required: true },
-    attachments: [{ type: String, required: true }],
+    attachments: [{ type: Object, required: true }],
 });
 
 
