# src/models/Session.ts
@@ -9,13 +9,13 @@ const SessionSchema = new Schema<ISession>({
     startDate: { type: Date, required: true },
     duration: { type: Number, required: true },
     serviceType: { type: String, required: true },
-    location: { type: String, required: true },
-    attachments: { type: String, required: true },
+    location: { type: Object, required: true },
+    attachments: { type: Object, required: true },
     requierments: { type: String, required: true },
-    ratings: [{ type: String, required: true }],
-    reviews: [{ type: String, required: true }],
+    ratings: [{ type: Object, required: true }],
+    reviews: [{ type: Object, required: true }],
     sessionFee: { type: Number, required: true },
-    payments: [{ type: String, required: true }],
+    payments: [{ type: Object, required: true }],
     status: { type: String, required: true },
     doctorReferral: { type: String, required: true },
 });
